syntax = "proto3";

package car;

import "car/message.proto";

message ListCarsRequest {
  // The maximum number of items to return.
  int32 page_size = 1;

  // The next_page_token value returned from a previous List request, if any.
  string page_token = 2;
}

message ListCarsResponse {
  // The field name should match the noun "Car" in the method name.
  // There will be a maximum number of items returned based on the page_size field in the request.
  repeated Car cars = 1;

  // Token to retrieve the next page of results, or empty if there are no more results in the list.
  string next_page_token = 2;
}

message GetCarRequest {
  // The field will contain name of the resource requested.
  string id = 1;
}

message GetCarResponse {
  Car car = 1;
}

message CreateCarRequest {
  string brand = 3;
  string model = 4;
}

message CreateCarResponse {
  Car car  = 1;
}

message UpdateCarRequest {
  string id = 1;
  string brand = 3;
  string model = 4;
}

message UpdateCarResponse {
  Car car  = 1;
}

message DeleteCarRequest {
  string id = 1;
}

message DeleteCarResponse {
  Car car  = 1;
}
